# dcss-agent

./: .envrc  .gitignore  PROGRESSION.md  README.md  devenv.nix  main.py  play.py  prepare.py  pyproject.toml
data/: chunks.json  embeddings.faiss
data/raw/: early_game.txt  escaping.txt  kiting.txt  late_game.txt  mid_game.txt  tips.txt
rag/: builder.py  rag.py
src/: dcss_handler.py  main_agent.py
src/agents/: _rag_use.py  basic.py  character.py  fighting.py  guides.py  main.py  master.py  movement.py  skills.py  state.py  strategy.py  tactics.py
src/game/: game_handler.py  utils.py
src/models/: character.py  game_state.py
src/prompts/: fighting.md  master.md  movement.md  skills.md
src/rag/: chunk_embed.py  embed.py
src/tools/: game_guide.py
